@@ -1,5 +1,11 @@
 2006-10-19  Michael Natterer  <mitch@gimp.org>
 
+	* app/tools/gimptransformtool.c (gimp_transform_tool_draw): show
+	the outline of the selection while transforming it.
+	Fixes bug #362587.
+
+2006-10-19  Michael Natterer  <mitch@gimp.org>
+
 	* app/actions/tools-actions.c (tools_alternative_actions): remove
 	the accelerator from the "Arbitrary Rotation" action, Shift+R
 	should switch to the rotate tool, not switch to the rotate tool
